# TUIplay

./: Cargo.toml  README.md  music.db
flatpak/: com.malagatech.tuiplay.desktop  com.malagatech.tuiplay.flatpakref  com.malagatech.tuiplay.metainfo.xml  com.malagatech.tuiplay.yml
src/: app.rs  cd_writer.rs  config.rs  db.rs  editor.rs  library.rs  main.rs  metadata.rs  models.rs  ogg_utils.rs  player.rs  prompt.rs  scanner.rs  ui.rs
