[package]
name = "TUIplay"
version = "0.1.0"


[dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2.5"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
symphonia = { version = "0.5", features = [
    "aac",
    "mp3",
    "flac",
    "vorbis",
    "wav",
    "pcm",
    "isomp4",
    "ogg"
] }
tokio = { version = "1", features = ["full"] }
ogg = "0.9"
opus = "0.3"
